call_errors.log
cargo :     Checking fantasmagorie v0.1.0 (E:\Projects\FantasmagorieRust)
発生場所 行:1 文字:1
+ cargo check --features opengl --example window_demo 2>&1 | Out-File - ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking fa...tasmagorieRust) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `crate::core::Vec2`
 --> src\view\animation.rs:4:5
  |
4 | use crate::core::Vec2;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Duration`
  --> src\devtools\profiler.rs:10:17
   |
10 | use std::time::{Duration, Instant};
   |                 ^^^^^^^^

error[E0061]: this function takes 7 arguments but 6 arguments were supplied
   --> src\view\renderer.rs:218:17
    |
218 |                 render_text_at_special(Vec2::new(cur_x, start_y), icon, i
_size, view.fg_color.get(), f_idx, dl);
    |                 ^^^^^^^^^^^^^^^^^^^^^^ ------------------------- argument
 #1 of type `&mut FontManager` is missing
    |
note: function defined here
   --> src\view\renderer.rs:229:4
    |
229 | fn render_text_at_special(fm: &mut FontManager, pos: Vec2, text: &str, si
ze: f32, color: ColorF, font_idx: usize, dl: &mut DrawList) {
    |    ^^^^^^^^^^^^^^^^^^^^^^ --------------------
help: provide the argument
    |
218 |                 render_text_at_special(/* &mut FontManager */, Vec2::new(
cur_x, start_y), icon, i_size, view.fg_color.get(), f_idx, dl);
    |                                        +++++++++++++++++++++++

error[E0061]: this function takes 7 arguments but 6 arguments were supplied
   --> src\view\renderer.rs:223:17
    |
223 |                 render_text_at_special(Vec2::new(cur_x, start_y), text, v
iew.font_size.get(), view.fg_color.get(), 0, dl);
    |                 ^^^^^^^^^^^^^^^^^^^^^^ ------------------------- argument
 #1 of type `&mut FontManager` is missing
    |
note: function defined here
   --> src\view\renderer.rs:229:4
    |
229 | fn render_text_at_special(fm: &mut FontManager, pos: Vec2, text: &str, si
ze: f32, color: ColorF, font_idx: usize, dl: &mut DrawList) {
    |    ^^^^^^^^^^^^^^^^^^^^^^ --------------------
help: provide the argument
    |
223 |                 render_text_at_special(/* &mut FontManager */, Vec2::new(
cur_x, start_y), text, view.font_size.get(), view.fg_color.get(), 0, dl);
    |                                        +++++++++++++++++++++++

error[E0061]: this function takes 6 arguments but 5 arguments were supplied
   --> src\view\renderer.rs:328:18
    |
328 |                  render_text_at(Vec2::new(x, y), &t, current_font_size, v
iew.fg_color.get(), dl);
    |                  ^^^^^^^^^^^^^^ --------------- argument #1 of type `&mut
 FontManager` is missing
    |
note: function defined here
   --> src\view\renderer.rs:257:4
    |
257 | fn render_text_at(fm: &mut FontManager, pos: Vec2, text: &str, size: f32,
 color: ColorF, dl: &mut DrawList) {
    |    ^^^^^^^^^^^^^^ --------------------
help: provide the argument
    |
328 |                  render_text_at(/* &mut FontManager */, Vec2::new(x, y), 
&t, current_font_size, view.fg_color.get(), dl);
    |                                 +++++++++++++++++++++++

error[E0061]: this function takes 6 arguments but 5 arguments were supplied
   --> src\view\renderer.rs:456:5
    |
456 |     render_text_at(text_pos, view.text.get(), view.font_size.get(), view.
fg_color.get(), dl);
    |     ^^^^^^^^^^^^^^ -------- argument #1 of type `&mut FontManager` is mis
sing
    |
note: function defined here
   --> src\view\renderer.rs:257:4
    |
257 | fn render_text_at(fm: &mut FontManager, pos: Vec2, text: &str, size: f32,
 color: ColorF, dl: &mut DrawList) {
    |    ^^^^^^^^^^^^^^ --------------------
help: provide the argument
    |
456 |     render_text_at(/* &mut FontManager */, text_pos, view.text.get(), vie
w.font_size.get(), view.fg_color.get(), dl);
    |                    +++++++++++++++++++++++

warning: unused variable: `desc`
   --> src\core\undo.rs:243:17
    |
243 |             let desc = cmd.description().to_string();
    |                 ^^^^ help: if this is intentional, prefix it with an unde
rscore: `_desc`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by defau
lt

warning: unused variable: `desc`
   --> src\core\undo.rs:255:17
    |
255 |             let desc = cmd.description().to_string();
    |                 ^^^^ help: if this is intentional, prefix it with an unde
rscore: `_desc`

warning: unused variable: `id`
  --> src\widgets\mod.rs:18:21
   |
18 |     pub fn id(self, id: impl Into<ID>) -> Self {
   |                     ^^ help: if this is intentional, prefix it with an und
erscore: `_id`

warning: variable does not need to be mutable
  --> src\text\markdown.rs:40:9
   |
40 |     let mut flush = |spans: &mut Vec<TextSpan>, in_bold: bool, in_italic: 
bool, buffer: &mut String| {
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `remainder`
  --> src\text\markdown.rs:89:17
   |
89 |             let remainder = &input[i..]; // Note: byte indexing vs char in
dexing mismatch risk here. 
   |                 ^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_remainder`

warning: unused variable: `rect_loc`
   --> src\backend\opengl.rs:340:13
    |
340 |         let rect_loc = gl.get_uniform_location(program, "u_rect");
    |             ^^^^^^^^ help: if this is intentional, prefix it with an unde
rscore: `_rect_loc`

warning: unused variable: `radii_loc`
   --> src\backend\opengl.rs:341:13
    |
341 |         let radii_loc = gl.get_uniform_location(program, "u_radii");
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an und
erscore: `_radii_loc`

warning: unused variable: `border_width_loc`
   --> src\backend\opengl.rs:342:13
    |
342 |         let border_width_loc = gl.get_uniform_location(program, "u_border
_width");
    |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with
 an underscore: `_border_width_loc`

warning: unused variable: `border_color_loc`
   --> src\backend\opengl.rs:343:13
    |
343 |         let border_color_loc = gl.get_uniform_location(program, "u_border
_color");
    |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with
 an underscore: `_border_color_loc`

warning: unused variable: `elevation_loc`
   --> src\backend\opengl.rs:344:13
    |
344 |         let elevation_loc = gl.get_uniform_location(program, "u_elevation
");
    |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an
 underscore: `_elevation_loc`

warning: unused variable: `glow_strength_loc`
   --> src\backend\opengl.rs:345:13
    |
345 |         let glow_strength_loc = gl.get_uniform_location(program, "u_glow_
strength");
    |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it wit
h an underscore: `_glow_strength_loc`

warning: unused variable: `glow_color_loc`
   --> src\backend\opengl.rs:346:13
    |
346 |         let glow_color_loc = gl.get_uniform_location(program, "u_glow_col
or");
    |             ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with a
n underscore: `_glow_color_loc`

warning: unused variable: `is_squircle_loc`
   --> src\backend\opengl.rs:347:13
    |
347 |         let is_squircle_loc = gl.get_uniform_location(program, "u_is_squi
rcle");
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with 
an underscore: `_is_squircle_loc`

warning: unused variable: `offset_loc`
   --> src\backend\opengl.rs:348:13
    |
348 |         let offset_loc = gl.get_uniform_location(program, "u_offset");
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an un
derscore: `_offset_loc`

warning: unused variable: `scale_loc`
   --> src\backend\opengl.rs:349:13
    |
349 |         let scale_loc = gl.get_uniform_location(program, "u_scale");
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an und
erscore: `_scale_loc`

warning: unreachable pattern
   --> src\backend\opengl.rs:814:13
    |
814 |             _ => {}
    |             ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> src\backend\opengl.rs:814:13
    |
546 |             DrawCommand::PushClip { pos, size } => {
    |             ----------------------------------- matches some of the same 
values
...
551 |             DrawCommand::PopClip => {
    |             -------------------- matches some of the same values
...
554 |             DrawCommand::PushTransform { offset, scale } => {
    |             -------------------------------------------- matches some of 
the same values
...
558 |             DrawCommand::PopTransform => {
    |             ------------------------- matches some of the same values
...
814 |             _ => {}
    |             ^ ...and 9 other patterns collectively make this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by d
efault

warning: unused variable: `passes`
   --> src\backend\opengl.rs:647:21
    |
647 |                 let passes = (*sigma as i32).clamp(1, 8);
    |                     ^^^^^^ help: if this is intentional, prefix it with a
n underscore: `_passes`

warning: unused variable: `uv_scale`
   --> src\backend\opengl.rs:648:21
    |
648 |                 let uv_scale = Vec2::new(1.0 / w as f32, 1.0 / h as f32);
    |                     ^^^^^^^^ help: if this is intentional, prefix it with
 an underscore: `_uv_scale`

For more information about this error, try `rustc --explain E0061`.
warning: `fantasmagorie` (lib) generated 20 warnings
error: could not compile `fantasmagorie` (lib) due to 4 previous errors; 20 war
nings emitted
